# dmotl

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
include/: dmotl.h  dmotl_config.h.in  otlv4.h
src/dmotl_module/: dmotl_module.cpp  dmotl_module.h
test/dmotltest/: dmotltest.cpp
test/mssqltest/: mssqltest.cpp
test/mysqltest/: mysqltest.cpp
